[package]
name = "adventofcode21"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day_1.rs"

[[bin]]
name = "day2"
path = "src/day_2.rs"

[[bin]]
name = "day3"
path = "src/day_3.rs"


[[bin]]
name = "day4"
path = "src/day_4.rs"

[[bin]]
name = "day5"
path = "src/day_5.rs"


[[bin]]
name = "day6"
path = "src/day_6.rs"

[[bin]]
name = "day7"
path = "src/day_7.rs"

[dependencies]
itertools = "0.10"
